[gd_scene load_steps=8 format=3 uid="uid://ba7ube4n1lcr4"]

[ext_resource type="Script" uid="uid://bvmqs1gweva11" path="res://Scenes/UI/hud.gd" id="1_fdl0h"]
[ext_resource type="PackedScene" uid="uid://bjfc6wheo3v7b" path="res://Scenes/UI/Bars/HealthBar/barra_de_vida.tscn" id="1_ny26j"]
[ext_resource type="PackedScene" uid="uid://bufhutyfr8jx1" path="res://Scenes/UI/Bars/HappinessBar/barra_de_felicidade.tscn" id="2_fdl0h"]
[ext_resource type="PackedScene" uid="uid://5h54k30838oy" path="res://Scenes/UI/Skills/ActivatableSkills/activatable_skills_box.tscn" id="4_8glcj"]
[ext_resource type="PackedScene" uid="uid://bal6kmgppjobf" path="res://Scenes/UI/Bars/XpBae/xp_bar.tscn" id="5_vsu76"]
[ext_resource type="FontFile" uid="uid://bx8l4oght8p7b" path="res://Assets/Fonts/Pixel Game.otf" id="6_ux5h0"]

[sub_resource type="LabelSettings" id="LabelSettings_mqf2c"]
line_spacing = -16.0
font_size = 42
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_fdl0h")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(374, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="HealthBar" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_ny26j")]
unique_name_in_owner = true
layout_mode = 2

[node name="HappinessBar" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_fdl0h")]
unique_name_in_owner = true
layout_mode = 2

[node name="ActivatableSkillsBox" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_8glcj")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="XpBar" parent="MarginContainer" instance=ExtResource("5_vsu76")]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("6_ux5h0")
theme_override_font_sizes/font_size = 42
text = "
5:30"
label_settings = SubResource("LabelSettings_mqf2c")
horizontal_alignment = 1
vertical_alignment = 2
